--- a/.github/workflows/runTest.yml
+++ b/.github/workflows/runTest.yml
@@ -23,4 +23,6 @@ jobs:
         run: npm install
 
       - name: Run Tests
-        run: npm test
+      run: |
+      export NODE_OPTIONS="--experimental-vm-modules"
+      npm test
