--- a/.github/workflows/runTest.yml
+++ b/.github/workflows/runTest.yml
@@ -23,6 +23,4 @@ jobs:
         run: npm install
 
       - name: Run Tests
-      run: |
-      export NODE_OPTIONS="--experimental-vm-modules"
-      npm test
+        run: npm test
