--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cucumber-html-reporter": "^6.0.0",
     "express": "^4.21.1",
     "open": "^10.1.0",
+    "selenium": "^2.20.0",
     "selenium-webdriver": "^4.31.0"
   }
 }
