--- a/.github/workflows/runTest.yml
+++ b/.github/workflows/runTest.yml
@@ -22,5 +22,29 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Install Google Chrome
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y wget unzip gnupg
+          wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+          sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable
+
+      - name: Install matching ChromeDriver
+        run: |
+          CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+')
+          wget -q https://chromedriver.storage.googleapis.com/LATEST_RELEASE_${CHROME_VERSION}
+          VERSION=$(cat LATEST_RELEASE_${CHROME_VERSION})
+          wget https://chromedriver.storage.googleapis.com/$VERSION/chromedriver_linux64.zip
+          unzip chromedriver_linux64.zip
+          sudo mv chromedriver /usr/local/bin/
+          sudo chmod +x /usr/local/bin/chromedriver
+
+      - name: Print Chrome and ChromeDriver versions
+        run: |
+          google-chrome --version || echo "Chrome not found"
+          chromedriver --version || echo "ChromeDriver not found"
+
       - name: Run Cucumber Tests
         run: npm run test
