--- a/.github/workflows/runTest.yml
+++ b/.github/workflows/runTest.yml
@@ -22,18 +22,15 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Install Google Chrome
+      - name: Install Chrome
         run: |
-          sudo apt-get update
-          sudo apt-get install -y wget unzip gnupg
-          wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
-          sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
           sudo apt-get update
           sudo apt-get install -y google-chrome-stable
 
       - name: Install matching ChromeDriver
         run: |
           CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+')
+          echo "Detected Chrome version: $CHROME_VERSION"
           wget -q https://chromedriver.storage.googleapis.com/LATEST_RELEASE_${CHROME_VERSION}
           VERSION=$(cat LATEST_RELEASE_${CHROME_VERSION})
           wget https://chromedriver.storage.googleapis.com/$VERSION/chromedriver_linux64.zip
@@ -41,10 +38,10 @@ jobs:
           sudo mv chromedriver /usr/local/bin/
           sudo chmod +x /usr/local/bin/chromedriver
 
-      - name: Print Chrome and ChromeDriver versions
+      - name: Check versions
         run: |
-          google-chrome --version || echo "Chrome not found"
-          chromedriver --version || echo "ChromeDriver not found"
+          google-chrome --version
+          chromedriver --version
 
       - name: Run Cucumber Tests
         run: npm run test
