--- a/.github/workflows/runTest.yml
+++ b/.github/workflows/runTest.yml
@@ -22,5 +22,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Set unique user data directory
+        run: |
+          export USER_DATA_DIR=$(mktemp -d)
+          echo "Created user data directory at $USER_DATA_DIR"
+          npm run test -- --user-data-dir=$USER_DATA_DIR
+
       - name: Run Cucumber Tests
         run: npm run test
