--- a/.github/workflows/runTest.yml
+++ b/.github/workflows/runTest.yml
@@ -24,4 +24,7 @@ jobs:
 
       - name: Run Cucumber Tests Without User Data Dir
         run: npm run test -- --disable-extensions
-      
+
+      - name: Run Cucumber Tests
+        run: npm run test
+
