--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@cucumber/cucumber": "^11.0.1",
     "chai": "^5.1.1",
+    "chromedriver": "^135.0.2",
     "cucumber-html-reporter": "^6.0.0",
     "express": "^4.21.1",
     "open": "^10.1.0",
