--- a/.github/workflows/runTest.yml
+++ b/.github/workflows/runTest.yml
@@ -22,5 +22,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Start server
+        run: |
+          npm start &
+          echo "Waiting for server to be ready..."
+          npx wait-on http://localhost:3000
+
       - name: Run Cucumber Tests
         run: npm run test
